<resources>
    <string name="app_name">Blurb</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="error_text">We can\'t seem to load this content.</string>
    <string name="error_text_feeds">We can\'t seem to load your feeds.</string>
    <string name="river_feed">River of News</string>
    <string name="fav_stories">Favorite Stories</string>
    <string name="create_title">Create Account</string>
    <string name="login_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with Newsblur</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_dest_fav">View Favorite Stories</string>
    <string name="action_sign_out">Sign out</string>
    <string name="nav_dest_home">Your Feeds</string>
    <string name="action_support">Support the developer…</string>
    <string name="create_account_prompt">Create a NewsBlur account</string>
    <string name="retry_action">Retry</string>
    <string name="http_error">HTTP Error %1$o</string>
    <string name="error_debug_this">Login wasn\'t saved, or check was improperly performed.</string>
    <string name="shared_pref_file">com.mowdowndevelopments.blurb.prefs</string>
    <string name="logged_in_key">com.mowdowndevelopments.blurb.logged_in</string>
    <string name="action_register">Create Account</string>
    <string name="prompt_username">Username</string>
    <string name="cd_folder">Folder</string>
    <string name="cd_icon">Feed Icon</string>
    <string name="logged_toast">Logged in as %1$s</string>
    <string name="no_credentials_error">Please enter your login credentials.</string>
    <string name="missing_registration_error">Please enter a username and email address.</string>
    <string name="bad_credential_error"><![CDATA[You were not logged in. Check your username & password.]]></string>
    <string name="bad_registration_error">Your account was not created. Maybe your email or username is already in use.</string>
    <string name="action_add_feed">Add feed…</string>
    <string name="mi_add_folder">Add folder…</string>
    <string name="title_prefs">Preferences</string>
    <string name="item_view_all">View All Feeds</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_sort_title">Default sort order</string>
    <string name="pref_filter_title">Default story filter</string>
    <string name="cat_display">Display preferences</string>
    <string name="pref_empty_feeds">Show empty feeds</string>
    <string name="pref_key_empty">show_empty_feeds</string>
    <string name="item_view_in">View original…</string>
    <string name="mi_unread">Mark as unread</string>
    <string name="dest_stories">Stories</string>
    <string name="menu_share">Share…</string>
    <string name="fab_remove_star">Remove from starred</string>
    <string name="fab_add_star">Mark as starred</string>
    <string name="title_folder_dialog">Create Folder</string>
    <string name="hint_folder">New Folder Name</string>
    <string name="dialog_btn_add_folder">Add folder</string>
    <string name="label_nested">Nested under:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_new_feed">Add New Feed</string>
    <string name="feed_hint">Feed URL</string>
    <string name="folder_title">Put in folder:</string>
    <string name="dialog_btn_add_feed">Add feed</string>
    <string name="menu_about">About this…</string>
    <string name="pref_filter_key">read_filter</string>
    <string name="pref_sort_key">sort_order</string>
    <string name="pref_cat_analytics">Analytics</string>
    <string name="pref_crashlytics_title">Enable automatic crash reporting</string>
    <string name="pref_crashlytics_key">crashlytics</string>
    <string name="pref_crashlytics_summary_off">Opt in to automatically send crash reports to the developer. This will include sending diagnostic data about how you use Blurb.</string>
    <string name="pref_crashlytics_summary_on">You have opted in to automatically send crash reports and diagnostic data about your usage of Blurb to the developer.</string>
    <string name="dialog_sort_title">Sort order:</string>
    <string name="dialog_filter_title">Show entries:</string>
    <string name="btn_set_filter">Set filters</string>
    <string name="m_title_mark_all">Mark All as Read</string>
    <string name="m_title_sort_filter">Sort order/filter unread</string>
    <string name="err_fail_mark_all">Could not mark feed as read.\n</string>
    <string name="error_star_fetch">Unable to fetch starred stories\n</string>
    <string name="pref_analytics_title">Enable analytics</string>
    <string name="pref_analytics_key">analytics</string>
    <string name="pref_analytics_sum_off">Opt in to automatically send anonymized data to the developer to help improve the app.</string>
    <string name="pref_analytics_sum_on">You have opted in to send anonymous usage data to the developer to help improve the app.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="desc_prev_btn">Previous Story Button</string>
    <string name="desc_next_btn">Next Story Button</string>
    <string name="unknown">\????</string>
    <string name="gplay_error">Cannot establish connection to Google Play.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_checkbox">Checkbox</string>
    <string name="iap_error">Purchase could not be completed.</string>
    <string name="donation_text">You can support the developer by making any donation from the list. This app will always be ad-free. (NewsBlur wouldn\'t have it any other way.)</string>
    <string name="desc_collapse">Collapse folder</string>
    <string name="desc_expand">Expand folder</string>
    <string name="desc_favicon">FavIcon</string>
    <string name="msg_unknown_error">Unknown error</string>
</resources>