<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mowdowndevelopments.blurb.ui.navHost.MainActivity">
    <item
        android:icon="@drawable/ic_fav_feeds"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        android:id="@+id/action_show_favorites"
        android:title="@string/nav_dest_fav"/>
    <item
        android:orderInCategory="100"
        android:id="@+id/action_logout"
        android:title="@string/action_sign_out"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="99"
        android:title="@string/menu_about"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_donate"
        android:orderInCategory="97"
        android:title="@string/action_support"
        app:showAsAction="never"/>
</menu>